--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Stats preview card component</title>
+  <link rel="stylesheet" href="style.css">
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
@@ -15,8 +16,15 @@
   </style>
 </head>
 <body>
+  <div class="container">
+    <div class="left">
+      <div class="heading">
+        <h2>Get insights that help your business grow.</h2>
+      </div>
+    </div>
+  </div>
 
-  Get insights that help your business grow.
+  
 
   Discover the benefits of data analytics and make better decisions regarding revenue, customer 
   experience, and overall efficiency.
